--- a/01.titanic/titanic.ipynb
+++ b/01.titanic/titanic.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "RandomForestClassifier(max_depth=3, random_state=2)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
        "4          896         1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,11 +919,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "first_RFC.to_csv('./output/firt_RFC.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "model = LinearRegression().fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.10979185,  0.60879046,  0.26350666,  0.10979185,  0.60093998,\n",
+       "        0.10979185,  0.63858822,  0.22585842,  0.63858822,  0.05019633,\n",
+       "        0.10979185,  0.41722146,  0.91622007,  0.2337089 ,  0.91622007,\n",
+       "        0.76250526,  0.26350666,  0.10979185,  0.60879046,  0.63858822,\n",
+       "        0.3874237 ,  0.10194137,  0.94601783,  0.40937099,  0.89266864,\n",
+       "        0.07999409,  0.93816735,  0.10979185,  0.41722146,  0.05019633,\n",
+       "        0.2337089 ,  0.20391114,  0.5930895 ,  0.5930895 ,  0.3874237 ,\n",
+       "        0.10979185,  0.63858822,  0.63858822,  0.10979185,  0.10979185,\n",
+       "        0.10194137,  0.41722146,  0.10979185,  0.79230302,  0.91622007,\n",
+       "        0.10979185,  0.41722146,  0.10979185,  0.94601783,  0.62288726,\n",
+       "        0.3874237 ,  0.26350666,  0.72485703,  0.8409236 ,  0.26350666,\n",
+       "       -0.01724967,  0.10979185,  0.10979185,  0.07999409,  0.94601783,\n",
+       "        0.10979185,  0.26350666,  0.10979185,  0.63858822,  0.34192499,\n",
+       "        0.79230302,  0.63858822,  0.41722146,  0.41722146,  0.88481816,\n",
+       "        0.63858822,  0.10979185,  0.63858822,  0.41722146,  0.94601783,\n",
+       "        0.41722146,  0.10979185,  0.88642231,  0.26350666,  0.63858822,\n",
+       "        0.07214361,  0.3874237 ,  0.41722146,  0.10979185,  0.26350666,\n",
+       "        0.07999409,  0.63858822,  0.63858822,  0.63858822,  0.22585842,\n",
+       "        0.60879046,  0.10979185,  0.90051912,  0.10979185,  0.41722146,\n",
+       "        0.10979185,  0.91622007,  0.10979185,  0.63858822,  0.10979185,\n",
+       "        0.91622007,  0.2337089 ,  0.10979185,  0.10979185,  0.60093998,\n",
+       "        0.10979185,  0.10979185,  0.10979185,  0.10979185,  0.26350666,\n",
+       "        0.26350666,  0.63858822,  0.94601783,  0.63858822,  0.91622007,\n",
+       "        0.07999409,  0.10979185,  0.60093998,  0.41722146,  0.76250526,\n",
+       "        0.79230302,  0.07999409,  0.91622007,  0.10979185,  0.10979185,\n",
+       "        0.63073774,  0.10979185,  0.5789927 ,  0.26350666,  0.10979185,\n",
+       "        0.10979185,  0.41722146,  0.60718631,  0.07999409,  0.10979185,\n",
+       "        0.10979185,  0.10979185,  0.26350666,  0.63858822,  0.03289122,\n",
+       "        0.47389846,  0.94601783,  0.36387227,  0.26350666,  0.41722146,\n",
+       "        0.02039857,  0.41722146,  0.10979185,  0.41722146,  0.22585842,\n",
+       "        0.93816735,  0.10979185,  0.10979185,  0.62288726, -0.02510014,\n",
+       "        0.10979185,  0.94601783,  0.63858822,  0.41722146,  0.62288726,\n",
+       "        0.63858822,  0.07214361,  0.79230302,  0.10979185,  0.26350666,\n",
+       "        0.60093998,  0.41722146,  0.03449538,  0.94601783,  0.63858822,\n",
+       "        0.10979185,  0.10979185,  0.07999409,  0.10979185,  0.0407417 ,\n",
+       "        0.77660207,  0.79230302,  0.3874237 ,  0.76875159,  0.93031688,\n",
+       "        0.26350666,  0.37957323,  0.91622007,  0.10979185,  0.90836959,\n",
+       "        0.26350666,  0.78445255,  0.05019633,  0.38450518,  0.26350666,\n",
+       "        0.2337089 ,  0.41722146,  0.07214361,  0.26350666,  0.2478057 ,\n",
+       "        0.10979185,  0.40152051,  0.63858822,  0.26350666,  0.63858822,\n",
+       "        0.63858822,  0.09409089,  0.3874237 ,  0.75465479,  0.26350666,\n",
+       "        0.41722146,  0.63858822,  0.26350666,  0.94601783,  0.10979185,\n",
+       "        0.10979185,  0.10979185,  0.26350666,  0.76250526,  0.50369622,\n",
+       "        0.41722146,  0.63858822,  0.37957323,  0.90836959,  0.10979185,\n",
+       "        0.76250526,  0.10979185,  0.79230302,  0.10979185,  0.94601783,\n",
+       "        0.62288726,  0.10979185,  0.63858822,  0.10979185,  0.26350666,\n",
+       "        0.26350666,  0.94601783,  0.07999409,  0.10979185,  0.3874237 ,\n",
+       "        0.10979185,  0.3874237 ,  0.10979185,  0.75465479,  0.91622007,\n",
+       "        0.94601783,  0.77660207,  0.37957323,  0.10979185,  0.06429313,\n",
+       "        0.3874237 ,  0.79230302,  0.22585842,  0.76250526,  0.60879046,\n",
+       "        0.74680431,  0.10979185,  0.3874237 ,  0.10979185,  0.10979185,\n",
+       "        0.10979185,  0.10979185,  0.10979185,  0.79230302,  0.10979185,\n",
+       "        0.07999409,  0.10979185,  0.77660207,  0.60093998,  0.26350666,\n",
+       "        0.10979185,  0.41722146,  0.10979185,  0.63858822,  0.10979185,\n",
+       "        0.41722146,  0.10979185,  0.91622007,  0.60879046,  0.10979185,\n",
+       "        0.76250526,  0.26350666,  0.2337089 ,  0.2337089 ,  0.26350666,\n",
+       "        0.63858822,  0.07214361,  0.63858822,  0.60093998,  0.60093998,\n",
+       "        0.10979185,  0.10979185,  0.3874237 ,  0.10979185,  0.10979185,\n",
+       "        0.41722146,  0.63858822,  0.10979185,  0.37957323,  0.10979185,\n",
+       "        0.10979185,  0.74680431,  0.05019633,  0.41722146,  0.10979185,\n",
+       "        0.10979185,  0.26350666,  0.25565618,  0.10979185,  0.63858822,\n",
+       "        0.90836959,  0.37172275,  0.10194137,  0.37957323,  0.60879046,\n",
+       "        0.10979185,  0.10979185,  0.10979185,  0.63858822,  0.94601783,\n",
+       "        0.63858822,  0.3874237 ,  0.26350666,  0.10979185,  0.20391114,\n",
+       "        0.10979185,  0.10979185,  0.26350666,  0.41722146,  0.94601783,\n",
+       "        0.10979185,  0.72485703,  0.41722146,  0.2337089 ,  0.26350666,\n",
+       "        0.77660207,  0.41722146,  0.10979185,  0.60093998,  0.10979185,\n",
+       "        0.41722146,  0.26350666,  0.09409089,  0.26350666,  0.10979185,\n",
+       "        0.26350666,  0.10979185,  0.00933979,  0.93816735,  0.07214361,\n",
+       "        0.63858822,  0.26350666,  0.63858822,  0.26350666,  0.79230302,\n",
+       "        0.93816735,  0.26350666,  0.26350666,  0.21800794,  0.5930895 ,\n",
+       "        0.41722146,  0.88642231,  0.10979185,  0.10979185,  0.60879046,\n",
+       "       -0.14429118,  0.75465479,  0.79230302,  0.10979185,  0.91622007,\n",
+       "        0.53813616,  0.07999409,  0.63858822,  0.93816735,  0.26350666,\n",
+       "        0.2337089 ,  0.94601783,  0.41722146,  0.26350666,  0.90836959,\n",
+       "        0.94601783,  0.5789927 ,  0.26350666,  0.41722146, -0.02510014,\n",
+       "        0.10979185,  0.10979185,  0.63858822,  0.60879046,  0.26350666,\n",
+       "        0.74680431,  0.10979185,  0.26350666,  0.10979185,  0.01254809,\n",
+       "        0.41722146,  0.93816735,  0.09409089,  0.26350666,  0.01254809,\n",
+       "        0.91622007,  0.10979185,  0.90836959,  0.10979185,  0.10979185,\n",
+       "        0.94601783,  0.2337089 ,  0.93816735,  0.41722146,  0.3874237 ,\n",
+       "        0.26350666,  0.2337089 ,  0.37957323,  0.63858822,  0.60093998,\n",
+       "        0.63858822,  0.91622007,  0.63858822,  0.10979185,  0.94601783,\n",
+       "        0.10979185,  0.10979185,  0.07214361])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test = model.predict(X_test)\n",
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_or_zero(x):\n",
+    "    if x >= 0.5:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return 0\n",
+    "    \n",
+    "y_pred = np.array([one_or_zero(x) for x in y_test])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0,\n",
+       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1,\n",
+       "       1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1,\n",
+       "       1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
+       "       0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
+       "       0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1,\n",
+       "       1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
+       "       0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0,\n",
+       "       1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1,\n",
+       "       0, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0,\n",
+       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
+       "       1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0,\n",
+       "       0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0,\n",
+       "       1, 1, 1, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
+       "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LR_result = pd.DataFrame({\n",
+    "    'PassengerId': test['PassengerId'],\n",
+    "    'Survived': y_pred,\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>893</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>894</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>895</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>896</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived\n",
+       "0          892         0\n",
+       "1          893         1\n",
+       "2          894         0\n",
+       "3          895         0\n",
+       "4          896         1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LR_result.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LR_result.to_csv('./output/LR_result.csv', index=False)"
    ]
   },
   {
